Remove homepage and update the index.html

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "portfolio",
-  "version": "0.1.0",
+  "name": "React_portfolio",
+  "version": "2.0.0",
   "private": true,
-  "homepage": "https://shloksomani.github.io/react-portfolio/",
   "dependencies": {
     "bootstrap": "^4.6.0",
     "gh-pages": "^2.2.0",
