--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "popper.js": "^1.16.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-helmet": "^6.1.0",
     "react-scripts": "^3.4.4",
     "react-typed": "^1.2.0",
     "typed.js": "^2.0.11"
